...
  sell('sell', '卖出'),
  dividend('dividend', '股息'),
  dividendReinvest('dividend_reinvest', '股息再投资'),
  split('split', '拆股'),
  transferIn('transfer_in', '转入'),
  transferOut('transfer_out', '转出'),
  fee('fee', '费用'),
  other('other', '其他');

  final String code;
  final String labelZh;

  const InvestmentTransactionType(this.code, this.labelZh);
...
